# xas-simulator

./: .gitignore  README.md  pyproject.toml  xas_comparison.ipynb  xas_comparison_script.py  xas_notebook.ipynb  xas_script.py
tests/: lmcd.ipynb
xas_simulator/: XMCD_src2.py  __init__.py  beamline_data_loader.py  info_dialogue.py  nexpy_nb_runner.py  notebook_runner.py  params_short.py  peem_loader.py  simulation.py  spectra_analysis.py  xas.py  xmcd_analysis.py  xmcd_loader.py
xas_simulator/notebooks/: xas_notebook.ipynb
