[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xas_simulator"
version = "0.3.0"
dependencies = [
    "nexpy",
    "hdfmap",
    "tabulate"
]

[tool.setuptools]
packages = ["xas_simulator"]

[project.entry-points."nexpy.plugins"]
xas_simulator = "xas_simulator:plugin_menu"
